complete working poc for application program creation including questions creation and updates

--- a/DynamicApplication.Core/DynamicApplication.Core.csproj
+++ b/DynamicApplication.Core/DynamicApplication.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DynamicApplication.Shared\DynamicApplication.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
