--- a/DynamicApplication.API/DynamicApplication.API.csproj
+++ b/DynamicApplication.API/DynamicApplication.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DynamicApplication.Core\DynamicApplication.Core.csproj" />
+    <ProjectReference Include="..\DynamicApplication.Shared\DynamicApplication.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
